helix/test/corpus/booleanos.txt
==============================
v suelta es una variable
==============================

ACCION var ES
    AMBIENTE
        v
    PROCESO
FIN_ACCION

---

(source_file
  (cabecera_accion
    palabra: (estructura)
    nombre: (identificador)
    es: (estructura))
  (estructura)
  (identificador)
  (estructura)
  (estructura))

==============================
V despues de := es el booleano
==============================

ACCION t ES
    PROCESO
        bandera := V;
FIN_ACCION

---

(source_file
  (cabecera_accion
    palabra: (estructura)
    nombre: (identificador)
    es: (estructura))
  (estructura)
  (identificador)
  (asignacion)
  (booleano)
  (puntuacion)
  (estructura))

==============================
F despues de una comparacion es el booleano
==============================

ACCION t ES
    PROCESO
        SI bandera = F ENTONCES
        FIN_SI
FIN_ACCION

---

(source_file
  (cabecera_accion
    palabra: (estructura)
    nombre: (identificador)
    es: (estructura))
  (estructura)
  (condicional)
  (identificador)
  (operador)
  (booleano)
  (condicional)
  (condicional)
  (estructura))
